[gd_scene load_steps=26 format=2]

[ext_resource path="res://components/dashboard/new_widget_popup/new_widget_popup.tscn" type="PackedScene" id=1]
[ext_resource path="res://components/shared/date_range_selector.tscn" type="PackedScene" id=2]
[ext_resource path="res://components/elements/styled/icon_button_text.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/tools/scroll_container_scrollbar_claim_space_vertical.gd" type="Script" id=4]
[ext_resource path="res://assets/icons/icon_128_delete_trashcan.svg" type="Texture" id=5]
[ext_resource path="res://assets/icons/icon_128_rename.svg" type="Texture" id=6]
[ext_resource path="res://components/dashboard/dashboard.gd" type="Script" id=7]
[ext_resource path="res://assets/icons/icon_128_fullscreen_variant.svg" type="Texture" id=9]
[ext_resource path="res://assets/icons/icon_128_edit_frame.svg" type="Texture" id=10]
[ext_resource path="res://assets/icons/icon_128_download_plain.svg" type="Texture" id=11]
[ext_resource path="res://components/elements/styled/style_color_auto_remap.gd" type="Script" id=12]
[ext_resource path="res://components/dashboard/dashboard_container.gd" type="Script" id=13]
[ext_resource path="res://assets/icons/icon_128_close_thick.svg" type="Texture" id=14]
[ext_resource path="res://assets/icons/icon_128_kebap_horizontal.svg" type="Texture" id=15]
[ext_resource path="res://assets/icons/icon_128_refresh_thick.svg" type="Texture" id=16]
[ext_resource path="res://assets/theme/dark_theme.tres" type="Theme" id=17]
[ext_resource path="res://components/shared/combo_box.tscn" type="PackedScene" id=18]
[ext_resource path="res://components/elements/styled/icon_button.tscn" type="PackedScene" id=19]

[sub_resource type="Gradient" id=10]
colors = PoolColorArray( 0.0470588, 0.0941176, 0.133333, 1, 0.0392157, 0.145098, 0.247059, 1 )

[sub_resource type="GradientTexture2D" id=11]
gradient = SubResource( 10 )
fill_from = Vector2( 1.057, -0.048 )
fill_to = Vector2( -0.274, 3.504 )

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 12.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.0392157, 0.145098, 0.247059, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0, 0, 0, 0.0470588 )

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform vec2 grid_size = vec2(100.0);
uniform vec2 margin_size = vec2(5.0);
uniform vec4 grid_color :  hint_color = vec4(0.14,0.14,0.2, 1.0);
uniform vec2 dashboard_size;
uniform float w = 1.0;

void fragment(){
	vec2 grid_px_size = grid_size;
	vec4 color = COLOR;
	vec2 coord_px = mod(UV *dashboard_size, grid_px_size);
	
	if (coord_px.x > grid_px_size.x - w || coord_px.y > grid_px_size.y - w){
		COLOR = grid_color;
	}
	if (coord_px.x > margin_size.x - w && coord_px.x < margin_size.x  || coord_px.y > margin_size.y - w && coord_px.y < margin_size.y ){
		COLOR = grid_color;
		COLOR.a *= 0.5;
	}
	if (coord_px.x > grid_px_size.x - margin_size.x - w && coord_px.x < grid_px_size.x - margin_size.x || coord_px.y > grid_px_size.y - margin_size.y - w &&  coord_px.y < grid_px_size.y - margin_size.y){
		COLOR = grid_color;
		COLOR.a *= 0.5;
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 6 )
shader_param/grid_size = Vector2( 100, 100 )
shader_param/margin_size = Vector2( 0, 0 )
shader_param/grid_color = Color( 0.447059, 0.360784, 0.545098, 0.309804 )
shader_param/dashboard_size = Vector2( 1000, 1000 )
shader_param/w = 1.0

[sub_resource type="StyleBoxFlat" id=13]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0, 0, 0, 0.0784314 )
shadow_size = 10
shadow_offset = Vector2( 0, 4 )

[sub_resource type="StyleBoxFlat" id=12]
content_margin_left = 6.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="DashboardContainer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 13 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.317647 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 11 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 17 )
custom_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 41.0
custom_styles/panel = SubResource( 8 )

[node name="Content" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 12.0
margin_top = 4.0
margin_right = 1916.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer/PanelContainer/Content"]
margin_right = 1904.0
margin_bottom = 33.0

[node name="FiltersContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/Content/HFlowContainer"]
margin_right = 473.0
margin_bottom = 33.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/Content/HFlowContainer/FiltersContainer"]
margin_top = 6.0
margin_right = 41.0
margin_bottom = 27.0
text = "Cloud"

[node name="CloudsCombo" parent="VBoxContainer/PanelContainer/Content/HFlowContainer/FiltersContainer" instance=ExtResource( 18 )]
margin_left = 45.0
margin_right = 145.0
margin_bottom = 33.0
items = [  ]

[node name="Label2" type="Label" parent="VBoxContainer/PanelContainer/Content/HFlowContainer/FiltersContainer"]
margin_left = 149.0
margin_top = 6.0
margin_right = 211.0
margin_bottom = 27.0
text = "Account"

[node name="AccountsCombo" parent="VBoxContainer/PanelContainer/Content/HFlowContainer/FiltersContainer" instance=ExtResource( 18 )]
margin_left = 215.0
margin_right = 315.0
margin_bottom = 33.0
items = [  ]

[node name="Label3" type="Label" parent="VBoxContainer/PanelContainer/Content/HFlowContainer/FiltersContainer"]
margin_left = 319.0
margin_top = 6.0
margin_right = 369.0
margin_bottom = 27.0
text = "Region"

[node name="RegionsCombo" parent="VBoxContainer/PanelContainer/Content/HFlowContainer/FiltersContainer" instance=ExtResource( 18 )]
margin_left = 373.0
margin_right = 473.0
margin_bottom = 33.0
items = [  ]

[node name="DateButton" type="Button" parent="VBoxContainer/PanelContainer/Content/HFlowContainer"]
margin_left = 759.0
margin_right = 909.0
margin_bottom = 33.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 6
size_flags_vertical = 0
text = "Last 24 hours"
flat = true

[node name="ToolButtons" type="HBoxContainer" parent="VBoxContainer/PanelContainer/Content/HFlowContainer"]
margin_left = 1759.0
margin_right = 1903.0
margin_bottom = 33.0
size_flags_horizontal = 10

[node name="DashboardAddWidgetButton" type="Button" parent="VBoxContainer/PanelContainer/Content/HFlowContainer/ToolButtons"]
unique_name_in_owner = true
visible = false
margin_left = 1746.0
margin_right = 1775.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 29 )
size_flags_horizontal = 10
text = "+ Add Widget"

[node name="KebapButton" parent="VBoxContainer/PanelContainer/Content/HFlowContainer/ToolButtons" instance=ExtResource( 19 )]
unique_name_in_owner = true
hint_tooltip = "More Options"
icon_tex = ExtResource( 15 )

[node name="DashboardEditButton" parent="VBoxContainer/PanelContainer/Content/HFlowContainer/ToolButtons" instance=ExtResource( 19 )]
unique_name_in_owner = true
margin_left = 37.0
margin_right = 70.0
hint_tooltip = "Edit dashboard"
toggle_mode = true
icon_tex = ExtResource( 10 )

[node name="MaximizeButton" parent="VBoxContainer/PanelContainer/Content/HFlowContainer/ToolButtons" instance=ExtResource( 19 )]
margin_left = 74.0
margin_right = 107.0
hint_tooltip = "Maximize dashboard"
icon_tex = ExtResource( 9 )

[node name="CloseButton" parent="VBoxContainer/PanelContainer/Content/HFlowContainer/ToolButtons" instance=ExtResource( 19 )]
margin_left = 111.0
margin_right = 144.0
hint_tooltip = "Close dashboard"
icon_tex = ExtResource( 14 )

[node name="MinimizedBar" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 91.0
margin_right = 1920.0
margin_bottom = 124.0
custom_constants/separation = 0
alignment = 1

[node name="Control" type="Control" parent="VBoxContainer/MinimizedBar"]
margin_right = 5.0
margin_bottom = 33.0
rect_min_size = Vector2( 5, 0 )

[node name="DashboardMinLabel" type="Label" parent="VBoxContainer/MinimizedBar"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_left = 5.0
margin_top = 6.0
margin_right = 1887.0
margin_bottom = 27.0
size_flags_horizontal = 3

[node name="MinimizeButton" type="Button" parent="VBoxContainer/MinimizedBar"]
modulate = Color( 1, 1, 1, 0.27451 )
margin_left = 1887.0
margin_right = 1920.0
margin_bottom = 33.0
rect_min_size = Vector2( 33, 33 )
hint_tooltip = "Minimize Dashboard"
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = "ButtonBorderless"
icon = ExtResource( 9 )
icon_align = 1
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 41.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_vertical = 3
scroll_horizontal_enabled = false
script = ExtResource( 4 )

[node name="Content" type="MarginContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1920.0
margin_bottom = 1039.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dashboard" type="Control" parent="VBoxContainer/ScrollContainer/Content"]
margin_right = 1920.0
margin_bottom = 1039.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 7 )

[node name="Grid" type="ColorRect" parent="VBoxContainer/ScrollContainer/Content/Dashboard"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.0941176, 0.160784, 0 )

[node name="Widgets" type="Control" parent="VBoxContainer/ScrollContainer/Content/Dashboard"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="References" type="Control" parent="VBoxContainer/ScrollContainer/Content/Dashboard"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="ResizeTimer" type="Timer" parent="VBoxContainer/ScrollContainer/Content/Dashboard"]
wait_time = 0.2
one_shot = true

[node name="PopupBG" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.0509804, 0.0980392, 0.705882 )

[node name="NewWidgetPopup" parent="." instance=ExtResource( 1 )]
self_modulate = Color( 0.091, 0.11245, 0.13, 1 )
default_size = Vector2( 800, 600 )

[node name="DateRangeSelector" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = 806.0
margin_top = 53.0
margin_right = 1094.0
margin_bottom = 285.0

[node name="KebapPopup" type="PopupPanel" parent="."]
self_modulate = Color( 0.0588235, 0.2, 0.337255, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -304.0
margin_top = 75.0
margin_right = -179.0
margin_bottom = 165.0
custom_styles/panel = SubResource( 13 )
script = ExtResource( 12 )

[node name="VBox" type="VBoxContainer" parent="KebapPopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 160.0
margin_bottom = 148.0

[node name="RefreshBox" type="PanelContainer" parent="KebapPopup/VBox"]
self_modulate = Color( 0.0588235, 0.2, 0.337255, 1 )
margin_right = 156.0
margin_bottom = 33.0
rect_min_size = Vector2( 0, 33 )
hint_tooltip = "Dashboard refresh interval"
mouse_filter = 1
custom_styles/panel = SubResource( 12 )
script = ExtResource( 12 )

[node name="HBoxContainer" type="HBoxContainer" parent="KebapPopup/VBox/RefreshBox"]
margin_left = 6.0
margin_right = 156.0
margin_bottom = 33.0
mouse_filter = 2
custom_constants/separation = -6

[node name="RefreshIcon" type="TextureRect" parent="KebapPopup/VBox/RefreshBox/HBoxContainer"]
modulate = Color( 0.537255, 0.819608, 0.945098, 1 )
margin_top = 5.0
margin_right = 22.0
margin_bottom = 27.0
rect_min_size = Vector2( 22, 22 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 16 )
expand = true
stretch_mode = 6

[node name="RefreshOptionButton" type="OptionButton" parent="KebapPopup/VBox/RefreshBox/HBoxContainer"]
unique_name_in_owner = true
show_behind_parent = true
margin_left = 16.0
margin_right = 150.0
margin_bottom = 33.0
rect_min_size = Vector2( 100, 0 )
mouse_filter = 1
size_flags_horizontal = 3
text = "15 min"
flat = true
items = [ "15 min", null, false, 0, null, "30 min", null, false, 1, null, "1 hr", null, false, 2, null, "5 hr", null, false, 3, null, "12 hr", null, false, 4, null, "24 hr", null, false, 5, null ]
selected = 0

[node name="ExportButton" parent="KebapPopup/VBox" instance=ExtResource( 3 )]
margin_top = 37.0
margin_right = 156.0
margin_bottom = 70.0
hint_tooltip = "Export dashboard to JSON"
size_flags_horizontal = 3
text = "       Export to JSON"
align = 0
icon_tex = ExtResource( 11 )

[node name="RenameButton" parent="KebapPopup/VBox" instance=ExtResource( 3 )]
margin_top = 74.0
margin_right = 156.0
margin_bottom = 107.0
hint_tooltip = "Rename dashboard"
size_flags_horizontal = 3
text = "       Rename"
align = 0
icon_tex = ExtResource( 6 )

[node name="DeleteButton" parent="KebapPopup/VBox" instance=ExtResource( 3 )]
margin_top = 111.0
margin_right = 156.0
margin_bottom = 144.0
hint_tooltip = "Delete dashboard"
size_flags_horizontal = 3
text = "       Delete"
align = 0
icon_tex = ExtResource( 5 )

[connection signal="option_changed" from="VBoxContainer/PanelContainer/Content/HFlowContainer/FiltersContainer/CloudsCombo" to="." method="_on_CloudsCombo_option_changed"]
[connection signal="option_changed" from="VBoxContainer/PanelContainer/Content/HFlowContainer/FiltersContainer/AccountsCombo" to="." method="_on_AccountsCombo_option_changed"]
[connection signal="option_changed" from="VBoxContainer/PanelContainer/Content/HFlowContainer/FiltersContainer/RegionsCombo" to="." method="_on_RegionsCombo_option_changed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/Content/HFlowContainer/DateButton" to="." method="_on_DateButton_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/Content/HFlowContainer/ToolButtons/DashboardAddWidgetButton" to="." method="_on_AddWidgetButton_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/Content/HFlowContainer/ToolButtons/KebapButton" to="." method="_on_KebapButton_pressed"]
[connection signal="toggled" from="VBoxContainer/PanelContainer/Content/HFlowContainer/ToolButtons/DashboardEditButton" to="." method="_on_DashboardEditButton_toggled"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/Content/HFlowContainer/ToolButtons/MaximizeButton" to="." method="_on_MaximizeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/Content/HFlowContainer/ToolButtons/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MinimizedBar/MinimizeButton" to="." method="_on_MinimizeButton_pressed"]
[connection signal="resized" from="VBoxContainer/ScrollContainer/Content/Dashboard/Grid" to="VBoxContainer/ScrollContainer/Content/Dashboard" method="_on_Grid_resized"]
[connection signal="timeout" from="VBoxContainer/ScrollContainer/Content/Dashboard/ResizeTimer" to="VBoxContainer/ScrollContainer/Content/Dashboard" method="_on_ResizeTimer_timeout"]
[connection signal="widget_added" from="NewWidgetPopup" to="." method="_on_NewWidgetPopup_widget_added"]
[connection signal="widget_added" from="NewWidgetPopup" to="VBoxContainer/ScrollContainer/Content/Dashboard" method="add_widget"]
[connection signal="widget_edited" from="NewWidgetPopup" to="." method="_on_NewWidgetPopup_widget_edited"]
[connection signal="range_selected" from="DateRangeSelector" to="." method="_on_DateRangeSelector_range_selected"]
[connection signal="item_selected" from="KebapPopup/VBox/RefreshBox/HBoxContainer/RefreshOptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="KebapPopup/VBox/ExportButton" to="." method="_on_ExportButton_pressed"]
[connection signal="pressed" from="KebapPopup/VBox/RenameButton" to="." method="_on_RenameButton_pressed"]
[connection signal="pressed" from="KebapPopup/VBox/DeleteButton" to="." method="_on_DeleteButton_pressed"]
